@@ -1,3 +1,8 @@
+2004-08-21  Andrew Lunn  <andrew.lunn@ascom.ch>
+
+	* src/flash.c (do_flash_init): cyg_flash_get_limits has been removed.
+	Reimplement this functionality using other calls.
+
 2004-08-13  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* cdl/redboot.cdl: Fixed the type of CYGNUM_REDBOOT_FLASH_BASE
